Part_1/1.12_project_v0.6/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-project-svc
spec:
  type: ClusterIP
  selector:
    app: web-project
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5000
